removing useless code of excel reader class. Fixing name align center

--- a/censo/src/main/resources/static/css/style.css
+++ b/censo/src/main/resources/static/css/style.css
@@ -116,9 +116,9 @@ html, body {
 
 .name {
 	display: inline-block;
-	margin: 0%;
+	margin: 0rem;
 	height: 4rem;
-	width: 6rem;
+	
 }
 
 .background-login{
@@ -140,4 +140,8 @@ filter: alpha(opacity=70);
 .language-usa{
 	background: url("../img/usa.png") no-repeat center center fixed;
 	
+}
+
+table.table td {
+	padding: 1rem;
 }
